--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
 <body class="composite">
     <div id="banner"> 
-        <a href="" id="bannerLeft"> <img src="docs/core/images/logo-silverpeas.png" alt="Silverpeas"/> </a>
+        <a href="" id="bannerLeft"> <img src="http://www.silverpeas.org/docs/core/images/logo-silverpeas.png" alt="Silverpeas"/> </a>
         <div class="clear">
         <hr />
         </div>
@@ -54,17 +54,7 @@
                 	<a target="_blank" href="http://www.facebook.com/pages/Silverpeas/113429255383677" class="Facebook">Join us on Facebook</a>
                 </li>
                 <li class="divider pull-right">|</li>
-                <li class="pull-right" > 
-                	 <!-- Place this tag where you want the +1 button to render  -->
-                      <g:plusone annotation="inline"></g:plusone>
-                      <script type="text/javascript">
-                              (function() {
-                                var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-                                po.src = 'https://apis.google.com/js/plusone.js';
-                                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-                              })();
-                            </script>
-                </li>
+                
             </ul>
       </div>
       <div class="subSection">
